--- a/newSBoard/CSS/stylesheet.css
+++ b/newSBoard/CSS/stylesheet.css
@@ -13,6 +13,7 @@ textarea {
     resize: none;
     width:500px;
     height:120px;
+   
 }
 
 h1 {
@@ -36,3 +37,54 @@ table {
     color: green;
     font-weight: bold;
 }
+/*ページトップボタン*/
+.button1{
+	background-color:#fff;
+	top:200px;
+	left:1500px;
+}#page-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    font-size: 77%;
+}
+#page-top a {
+    background: #666;
+    text-decoration: none;
+    color: #fff;
+    width: 100px;
+    padding: 30px 0;
+    text-align: center;
+    display: block;
+    border-radius: 5px;
+}
+#page-top a:hover {
+    text-decoration: none;
+    background: #999;
+}
+/*ヘッダー固定*/
+.sample{
+
+     background:ghostwhite;
+    
+    position: fixed;
+    top:0px;
+    padding: 0;
+    margin:0;
+    width: 100%;
+}
+.haku{
+margin-top:150px;
+
+}
+   
+div.scroll_button_btm a{
+    position: fixed;
+    display: block;
+    right:25px;
+    top:200px;
+    background: #313131;
+    color:#fff;
+    padding:20px;
+} 
+
