--- a/SBoard/CSS/stylesheet.css
+++ b/SBoard/CSS/stylesheet.css
@@ -1,9 +1,12 @@
 body {
-    background-color: ghostwhite;
+    background-image: url("../pic/back.jpg");
+    /* background-color:#f7b977; */
+    background-repeat: repeat;
+    background-attachment: fixed;
+    background-position: right bottom;
 }
 
 input {
-    margin: 10px;
     border: solid 1px black;
 }
 
@@ -13,26 +16,259 @@ textarea {
     resize: none;
     width:500px;
     height:120px;
+   
 }
 
 h1 {
-    margin: 0 10px;
-    color: rgb(78, 93, 109);
-    font-size: 18px;
+    margin: 8px 10px;
+    /* color: rgb(78, 93, 109); */
+    font-size: 20px;
+}
+
+.top-h1{
+    /* background-color: #007fff; */
+    margin: 0 auto;
+    text-align: center;
+}
+
+.top-h1 img{
+    height: 25vh;
 }
 
 table {
-    background-color: whitesmoke;
-    margin: 7px 15px;
-    box-shadow: 0.5px 0.5px rgb(202, 202, 202);
+    padding-top: 60px;
+    margin: -53px 15px 7px;
+    background-color: #fffff0;
+    box-shadow:#fff;
 }
 
 .attr{
-    font-size: 14px;
+    font-size: 15px;
+    margin-top: -60px;
+    padding-top: 60px;
 }
 
 .attr span {
     font-size: 18px;
-    color: green;
+    color: 0000ff;
     font-weight: bold;
+}
+
+.button1{
+	background-color:#fff;
+	top:200px;
+	left:1500px;
+}
+/*page-topボタン*/
+#page-top {
+    position: fixed;
+    bottom: 150px;
+    right: 20px;
+    font-size: 100%;
+}
+#page-top a {
+    background: #007fff;
+    text-decoration: none;
+    color: #fff;
+    width: 80px;
+    padding: 30px 0;
+    text-align: center;
+    display: block;
+    border-radius: 50px;
+}
+#page-top a:hover {
+    text-decoration: none;
+    background: #999;
+}
+/*ヘッダー固定*/
+.sample{
+    background:rgba(255,255,255,0.9);
+    position: fixed;
+    top:0px;
+    padding: 1.5px;
+    display: flex;
+    width: 100%;
+    height: 60px;
+    white-space: nowrap; /*ページサイズを変えてもヘッダー要素の折り返しを禁止する*/
+}
+/*bodyとheaderの隙間*/
+.haku{
+    margin-top:100px;
+}
+   
+
+/*最下部に下がるボタン*/
+.down{
+    position: fixed;
+    top: 600px; 
+    right:20px;    
+    display: flex;
+    font-size: 100%;
+    font-weight: bold;
+            
+    
+}
+.down a {
+    background: #007fff;
+    text-decoration: none;
+    color: #fff;
+    width: 80px;
+    padding: 30px 0;
+    text-align: center;
+    display: block;
+    border-radius: 50px;
+}
+.down a:hover {
+    text-decoration: none;
+    background: #999;
+}
+/*ヘッダーボタン*/
+.sticky {
+    margin-top: 10px;
+    margin-left:15px;
+    display: inline-block;
+    padding: 0.3rem 0.8rem;
+    text-decoration: none;
+    background: #f6f6f6;
+    border-left: solid 6px #3879D9;/*左線*/
+    border-right: solid 6px #3879D9;/*左線*/
+    color: #666;/*文字色*/
+    font-weight: bold;
+    vertical-align: middle;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.29);
+    border-radius: 5px;
+}
+.sticky:active {
+    box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.1);
+    transform: translateY(2px);
+}
+/*検索*/
+.sarch{
+    width: 20%;
+    height: 8vh;
+    /* position: fixed;
+    top: 0;
+    right: 20px; */
+    display: block;
+    float: right;
+    margin-top: 10px;
+    margin-left:1100px;
+}
+.search_container{
+    /* justify-content: space-around; */
+    border-radius: 5px;
+    /* box-sizing: border-box; */
+    border: 1px solid #999;
+    /* border:none; */
+    /* padding: 3px 10px; */
+    height: 2.3em;
+    width: 265px;
+    overflow: hidden;
+    display: flex;
+}
+.search_container input[type="text"]{
+    height: 2.0rem;
+    border:none;
+}
+.search_container input[type="text"]:focus {
+    outline: 0;
+    border:none;
+}
+.search_container input[type="submit"]{
+    cursor: pointer;
+    font-family: FontAwesome;
+    background: #3879D9;
+    color: #fff;
+    width: 3.5rem;
+    height: 3.0rem;
+    /* right:0px; */
+    margin-top: -3px;
+    outline : none;
+    /* margin-right:100px; */
+}
+
+.waku{
+    position: fixed;
+    top: 0;
+    margin-left: 120px;
+    text-align: center;
+    width: 80%;
+}
+
+.waku a{
+    height: 20%;
+}
+
+
+/*送信ボックス（レス　送信）*/
+.migi{
+    margin: 10px 225px;
+}
+/*送信ボックス（レス　名前）*/
+
+.migi1{
+    margin: 0 10px;
+}
+/*送信ボックス（スレッド　スレッドタイトル））*/
+.migi2{
+    margin:  0 10px;
+}
+.box2 {
+    padding: 0;
+    margin: 30px 480px;
+    font-weight: bold;
+    background: #FFF;
+    border: solid 3px #6091d3;/*線*/
+    border-radius: 10px;/*角の丸み*/
+}
+.box3 {
+    padding: 10px;
+    margin: 30px 150px;
+    
+    background: #FFF;
+    border: solid 2px #a9a9a9;/*線*/
+    border-radius: 10px;/*角の丸み*/
+    background-color:#fffff0;
+}
+
+/*枠みどり*/
+.box4 {
+    padding: 10px;
+    margin: 30px 150px;
+    background: #FFF;
+    border: solid 2px #a9a9a9;/*線*/
+    border-radius: 10px;/*角の丸み*/
+    background-color:#bbeebb;
+}
+.moji{
+	margin:0 0 0 50px;
+}
+.kara{
+	margin:-20px 0 0  50px;
+}
+
+/*戻るボタンの位置*/
+.ma{
+	margin:0 0 0 1000px;
+}
+
+/*ヘッダーアイコン*/
+.example1{
+    height: 20%;
+}
+
+.example1 img{
+    width: 120px;
+    height: 50px;
+}
+
+/*4ちゃんねる文字*/
+.moji2{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+}
+ 
+.iti{
+	margin:0 0 0 50px;
 }
