--- a/SBoard/CSS/stylesheet.css
+++ b/SBoard/CSS/stylesheet.css
@@ -100,7 +100,7 @@ table {
 /*Å‰º•”‚É‰º‚ª‚éƒ{ƒ^ƒ“*/
 .down{
     position: fixed;
-    top: 600px; 
+    bottom: 60px;
     right:20px;    
     display: flex;
     font-size: 100%;
